<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Booking" >

    <TextView
        android:id="@+id/textViewSelectedCinemaNameFinal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/cinemaName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/mint_green" />

    <TextView
        android:id="@+id/textViewselectedMovieNameFinal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/selectedMovieName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_blue" />

    <TextView
        android:id="@+id/bookingDetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.33"
        android:text="@string/bookingDetails"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/availableSeatsTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/ticketNumberEditText"
        android:layout_alignLeft="@+id/bookingDetailsTextView"
        android:layout_alignRight="@+id/bookingButton"
        android:layout_weight="0.78"
        android:text="@string/availableSeats"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ticketNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/nameEditText"
        android:layout_below="@+id/availableSeatsTextView"
        android:layout_weight="1.2"
        android:ems="10"
        android:hint="Ticket Number"
        android:inputType="number" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/surnameEditText"
        android:layout_alignLeft="@+id/ticketNumberEditText"
        android:layout_weight="1.2"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1.2"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName" >
    </EditText>

    <Button
        android:id="@+id/bookingButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="53dp"
        android:layout_weight="1.2"
        android:onClick="onBookTicketsClick"
        android:text="@string/bookButton" />

</LinearLayout>