<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieDetails" >

    <TextView
        android:id="@+id/selectedCinemaNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinemaName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/mint_green" />

    <TextView
        android:id="@+id/textViewselectedMovieNameFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectedCinemaNameTextView"
        android:layout_below="@+id/selectedCinemaNameTextView"
        android:layout_toLeftOf="@+id/imageViewTest"
        android:text="@string/selectedMovieName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/movieDetailsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/movieDetailsListView"
        android:layout_below="@+id/imageViewTest"
        android:background="@color/AliceBlue" >

    </ListView>

    <TextView
        android:id="@+id/textViewMovieInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewTest"
        android:layout_alignLeft="@+id/textViewselectedMovieNameFinal"
        android:layout_alignRight="@+id/selectedCinemaNameTextView"
        android:layout_below="@+id/textViewselectedMovieNameFinal"
        android:text="@string/movieInfo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageViewTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/movieDetailsListView"
        android:layout_below="@+id/textViewselectedMovieNameFinal"
        android:src="@drawable/download" />

</RelativeLayout>

 
</FrameLayout> 